--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mysqlfsdfsdf",
-  "version": "1.1.62",
+  "version": "1.1.44",
   "description": " It provides a set of methods or functions that allow you to construct MySQL queries programmatically, making it easier to generate complex queries or customize queries based on specific criteria.",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
