--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mysqlfsdfsdf",
-  "version": "1.1.44",
+  "name": "mysqlfssxxdfsdf",
+  "version": "1.1.111",
   "description": " It provides a set of methods or functions that allow you to construct MySQL queries programmatically, making it easier to generate complex queries or customize queries based on specific criteria.",
   "main": "index.js",
   "types": "index.d.ts",
