--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SRAKIB17/MySqlGeneratorNPM.git"
+    "url": "git+https://github.com/SRAKIB17/mysql-query-geniex.git"
   },
   "author": "SRAKIB17 <rakibulssc5@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SRAKIB17/MySqlGeneratorNPM/issues"
+    "url": "https://github.com/SRAKIB17/mysql-query-geniex/issues"
   },
-  "homepage": "https://github.com/SRAKIB17/MySqlGeneratorNPM#readme",
+  "homepage": "https://rpackage.vercel.app/npm/mysql-query-geniex/introduction",
   "keywords": [
     "database",
     "mysql",
